--- a/ConsoleApplication36.vcxproj
+++ b/ConsoleApplication36.vcxproj
@@ -131,6 +131,7 @@
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="TictactoeAlina.h" />
+    <ClInclude Include="TicTacToe_Inna.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
